<resources>
    <string name="app_name">Practica1</string>
    <string name="hello_string">Acceso</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="recordar">Recordar</string>
    <string name="entrar">Entrar</string>
    <string name="acceso_denegado">Acceso denegado</string>
    <string name="mis_datos">Mis datos</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="user_image">User Image</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
</resources>